syntax = "proto3";
package protos.output.global;

option go_package = "code-analyser/protos/pb/output/global";
import "protos/output/global/command.proto";

message ProcFile {
  // check ProcCommands
  bool used = 1;
  // list of all ProcCommands
  string filePath = 2;
  map<string, Command>  commands = 3;
}




